lab/01-cilium/policies/allow-monitoring.yaml
# Allow egress to monitoring namespace (Prometheus scraping, etc.)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-monitoring
  namespace: demo
spec:
  endpointSelector: { }
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
